--- a/README.html
+++ b/README.html
@@ -151,7 +151,7 @@ $(document).ready(function () {
 </li>
 </ol>
 <ul>
-<li>$ python setup.py install`<br />
+<li><code>$ python setup.py install</code><br />
 </li>
 </ul>
 <ol start="2" style="list-style-type: decimal">
